--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,3 +1,9 @@
+div.container{
+    border:1px solid rgb(41, 40, 40);
+    width:60%;
+    margin: 0 auto;
+    padding:10px;
+}
 table,th,td{
     border: 1px solid black;
     border-collapse: collapse;
