--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -2,7 +2,9 @@ div.container{
     border:1px solid rgb(41, 40, 40);
     width:60%;
     margin: 0 auto;
-    padding:10px;
+    padding-left:10px;
+    padding-bottom:5px;
+
 }
 table,th,td{
     border: 1px solid black;
